LPS-75470 Build Lang

--- a/dynamic-data-mapping-web/src/main/resources/content/Language_sr_RS_latin.properties
+++ b/dynamic-data-mapping-web/src/main/resources/content/Language_sr_RS_latin.properties
@@ -33,6 +33,7 @@ new-structure=Nova Struktura
 only-allow-deleting-required-fields-in-edit-mode=Samo je dozvoljeno brisanje obavezna polja u režimu uređivanja.
 parent-x=Parent {0} (Automatic Copy)
 please-enter-a-valid-script=Molimo Vas da unesete ispravnu skriptu.
+please-enter-only-alphanumeric-characters-or-underscore=Please enter only alphanumeric characters or underscore. (Automatic Copy)
 please-enter-unique-structure-field-names-(including-field-names-inherited-from-the-parent-structure)=Molimo Vas da unesete jedinstvena imena polja strukture (uključujući i imena polja nasleđena od strukture pretka)
 save-and-continue=Sačuvaj i Nastavi
 script-file=Script File (Automatic Copy)
